--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <div class="container">
         <div class="text-center">
           <img src="img/profile1.png" class="rounded-circle img-thumbnail">
-          <h1 class="display-4">Sandhika Galih</h1>
-          <h3 class="lead">Lecturer | Programmer | Youtuber</h3>
+          <h1 class="display-4">Dimas Wisnu Saputro</h1>
+          <h3 class="lead">Colleger | Programmer | Investor</h3>
         </div>
       </div>
     </div>
@@ -158,8 +158,8 @@
             
             <ul class="list-group mb-4">
               <li class="list-group-item"><h3>Location</h3></li>
-              <li class="list-group-item">My Office</li>
-              <li class="list-group-item">Jl. Setiabudhi No. 193, Bandung</li>
+              <li class="list-group-item">My Home</li>
+              <li class="list-group-item">Jl. Cijambe Kulon No. 77, Bandung</li>
               <li class="list-group-item">West Java, Indonesia</li>
             </ul>
           </div>
