--- a/index.html
+++ b/index.html
@@ -105,10 +105,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Name: </span> <span>Dimas Wisnu Saputro</span></p>
-                        <p><span class="title-s">Profile: </span> <span>full stack developer</span></p>
+                        <p><span class="title-s">Nama: </span> <span>Dimas Wisnu Saputro</span></p>
+                        <p><span class="title-s">Moto: </span> <span>"Keep Learning"</span></p>	
+                        <p><span class="title-s">Hobi: </span> <span>Chess & Learning</span></p>
                         <p><span class="title-s">Email: </span> <span>dimas.saputro.wisnu@gmail.com</span></p>
-                        <p><span class="title-s">Phone: </span> <span>(+62) 81528606535 </span></p>
                       </div>
                     </div>
                   </div>
@@ -140,20 +140,25 @@
                       </h5>
                     </div>
                     <p class="lead">
-                      Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Curabitur arcu erat, accumsan id
-                      imperdiet et, porttitor
-                      at sem. Praesent sapien massa, convallis a pellentesque nec, egestas non nisi. Nulla
-                      porttitor accumsan tincidunt.
+                      Saat ini, saya mahasiswa Politeknik Negeri Bandung yang mengambil program studi 
+		Teknik Informatika. Alasan mengapa saya mengambil prodi ini disebabkan karena saya menyukai 
+		matematika, tantangan, dan melihat besarnya peluang karier pada prodi ini. Perjalanan saya untuk 
+		berkuliah tidak mudah, saya telah di tolak beberapa kali saat mendaftar perguruan tinggi. 
                     </p>
                     <p class="lead">
-                      Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Vivamus suscipit tortor eget felis
-                      porttitor volutpat. Vestibulum
-                      ac diam sit amet quam vehicula elementum sed sit amet dui. porttitor at sem.
+                     Kekhawatiran saya tidak bisa melanjutkan kuliah menyebabkan saya membuat banyak rencana 
+		waktu itu. Saya membuat rencana agar tidak bingung bila tertolak dan cepat bangkit dari 
+		kesedihan. Setelah mendapatkan banyak penolakan, akhirnya saya keterima di polban melalui jalur 
+		mandiri. Saya sangat bersyukur telah diterima di Polban. Saya akan memaksimalkan kesempatan 
+		kuliah ini karena tidak semua orang bisa merasakan bangku kuliah. Saya pun ingin membuktikan 
+		ke Polban bahwa Polban tidak salah telah memilih saya.
                     </p>
                     <p class="lead">
-                      Nulla porttitor accumsan tincidunt. Quisque velit nisi, pretium ut lacinia in, elementum id enim.
-                      Nulla porttitor accumsan
-                      tincidunt. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a.
+                      Konsisten, jujur, sopan, dan bertanggung jawab merupakan gambaran diri saya saat ini. 
+		Saya percaya dengan sifat-sifat tersebut dapat membuat saya menjadi pribadi yang baik. Konsisten 
+		dalam diri saya dapat direpresentasikan saat saya belajar. Saya dapat menghabiskan waktu lama 
+		untuk belajar karena saya menganggap belajar itu menyenangkan. Menurut saya, belajar itu tidak 
+		akan ada hentinya. Walaupun sampai tua, kita akan terus belajar. 
                     </p>
                   </div>
                 </div>
