--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <header id="header" class="fixed-top">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <h1 class="logo"><a href="index.html">DevFolio</a></h1>
+      <h1 class="logo"><a href="index.html">Cocow15</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -105,9 +105,9 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Nama: </span> <span>Dimas Wisnu Saputro</span></p>
-                        <p><span class="title-s">Moto: </span> <span>"Keep Learning"</span></p>	
-                        <p><span class="title-s">Hobi: </span> <span>Chess & Learning</span></p>
+                        <p><span class="title-s">Nama : </span> <span>Dimas Wisnu Saputro</span></p>
+                        <p><span class="title-s">Moto : </span> <span>"Keep Learning"</span></p>	
+                        <p><span class="title-s">Hobi : </span> <span>Chess & Learning</span></p>
                         <p><span class="title-s">Email: </span> <span>dimas.saputro.wisnu@gmail.com</span></p>
                       </div>
                     </div>
@@ -758,7 +758,7 @@
       <div class="row">
         <div class="col-sm-12">
           <div class="copyright-box">
-            <p class="copyright">&copy; Copyright <strong>DevFolio</strong>. All Rights Reserved</p>
+            <p class="copyright">&copy; Copyright <strong>Cocow15</strong>. All Rights Reserved</p>
             <div class="credits">
               <!--
               All the links in the footer should remain intact.
