--- a/index.html
+++ b/index.html
@@ -664,7 +664,7 @@
                     <div class="socials">
                       <ul>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-facebook"></i></span></a></li>
-                        <li><a href="instagram.com/dimaswisnu3"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
+                        <li><a href="https://www.instagram.com/dimaswisnu3/"><span class="ico-circle"><i class="bi bi-instagram"></i></span></a></li>
                         <li><a href="twitter.com/dimaswis_"><span class="ico-circle"><i class="bi bi-twitter"></i></span></a></li>
                         <li><a href=""><span class="ico-circle"><i class="bi bi-linkedin"></i></span></a></li>
                       </ul>
