--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   <link href="assets/css/style.css" rel="stylesheet">
 
   <!-- =======================================================
-  * Template Name: DevFolio - v4.1.0
+  * Template Name: Cocow15 - v4.1.0
   * Template URL: https://bootstrapmade.com/devfolio-bootstrap-portfolio-html-template/
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
@@ -49,19 +49,19 @@
           <li><a class="nav-link scrollto " href="#blog">Blog</a></li>
           <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
-              <li><a href="#">Drop Down 1</a></li>
+              <li><a href="#hero">Home</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
-                  <li><a href="#">Deep Drop Down 1</a></li>
-                  <li><a href="#">Deep Drop Down 2</a></li>
-                  <li><a href="#">Deep Drop Down 3</a></li>
-                  <li><a href="#">Deep Drop Down 4</a></li>
-                  <li><a href="#">Deep Drop Down 5</a></li>
+                  <li><a href="#hero">Home</a></li>
+                  <li><a href="#about">About</a></li>
+                  <li><a href="#services">Services</a></li>
+                  <li><a href="#work">Work</a></li>
+                  <li><a href="#blog">Blog</a></li>
                 </ul>
               </li>
-              <li><a href="#">Drop Down 2</a></li>
-              <li><a href="#">Drop Down 3</a></li>
-              <li><a href="#">Drop Down 4</a></li>
+              <li><a href="#about">About</a></li>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#contact">Contact</a></li>
             </ul>
           </li>
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
@@ -80,7 +80,7 @@
         <div class="container">
           <!--<p class="display-6 color-d">Hello, world!</p>-->
           <h1 class="hero-title mb-4">I am Dimas Wisnu Saputro</h1>
-          <p class="hero-subtitle"><span class="typed" data-typed-items="Colleger, Developer, Freelancer, Investor"></span></p>
+          <p class="hero-subtitle"><span class="typed" data-typed-items="Colleger,Web Developer, Freelancer, Investor"></span></p>
           <!-- <p class="pt-3"><a class="btn btn-primary btn js-scroll px-4" href="#about" role="button">Learn More</a></p> -->
         </div>
       </div>
@@ -105,10 +105,10 @@
                     </div>
                     <div class="col-sm-6 col-md-7">
                       <div class="about-info">
-                        <p><span class="title-s">Nama : </span> <span>Dimas Wisnu Saputro</span></p>
-                        <p><span class="title-s">Moto : </span> <span>"Keep Learning"</span></p>	
-                        <p><span class="title-s">Hobi : </span> <span>Chess & Learning</span></p>
-                        <p><span class="title-s">Email : </span> <span>dimas.saputro.wisnu@gmail.com</span></p>
+                        <p><span class="title-s">Nama  : </span> <span>Dimas Wisnu Saputro</span></p>
+                        <p><span class="title-s">Moto   : </span> <span>"Keep Learning"</span></p>	
+                        <p><span class="title-s">Hobi   : </span> <span>Chess & Learning</span></p>
+                        <p><span class="title-s">Status : </span> <span>Mahasiswa</span></p>
                       </div>
                     </div>
                   </div>
