--- a/index.html
+++ b/index.html
@@ -315,14 +315,16 @@
       </div>
     </div><!-- End Counter Section -->
 
-    <!-- ======= Portfolio Section ======= -->
+<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+    
+<!-- ======= Portfolio Section ======= -->
     <section id="work" class="portofolio-mf sect-pt4 route">
       <div class="container">
         <div class="row">
           <div class="col-sm-12">
             <div class="title-box text-center">
               <h3 class="title-a">
-                Portfolio
+                Portofolio
               </h3>
               <p class="subtitle-a">
               </p>
@@ -413,7 +415,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Coffe</h2>
+                    <h2 class="w-title">Coffee</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -437,7 +439,7 @@
               <div class="work-content">
                 <div class="row">
                   <div class="col-sm-8">
-                    <h2 class="w-title">Studio Lena Mado</h2>
+                    <h2 class="w-title">Tools</h2>
                     <div class="w-more">
                       <span class="w-ctegory">Web Design</span> / <span class="w-date">18 Sep. 2018</span>
                     </div>
@@ -652,8 +654,8 @@
         
                       </p>
                       <ul class="list-ico">
-                        <li><span class="bi bi-geo-alt"></span> Jl. Cijambe Kulon No.77</li>
-                        <li><span class="bi bi-geo-alt"></span> Bandung, Jawa Barat, Indonesia</li>
+                        <li><a href=""><span class="bi bi-geo-alt"></span> Jl. Cijambe Kulon No.77</li>
+                        <li><a href=""><span class="bi bi-geo-alt"></span> Bandung, Jawa Barat, Indonesia</li>
                         <li><span class="bi bi-phone"></span> (+62) 81528606535</li>
                         <li><span class="bi bi-envelope"></span> dimas.saputro.wisnu@gmail.com</li>
                       </ul>
