--- a/index.html
+++ b/index.html
@@ -314,8 +314,6 @@
         </div>
       </div>
     </div><!-- End Counter Section -->
-
-<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
     
 <!-- ======= Portfolio Section ======= -->
     <section id="work" class="portofolio-mf sect-pt4 route">
@@ -654,8 +652,8 @@
         
                       </p>
                       <ul class="list-ico">
-                        <li><a href=""><span class="bi bi-geo-alt"></span> Jl. Cijambe Kulon No.77</li>
-                        <li><a href=""><span class="bi bi-geo-alt"></span> Bandung, Jawa Barat, Indonesia</li>
+                        <li><a href="https://www.google.com/maps/place/Bandung,+Kota+Bandung,+Jawa+Barat/@-6.9032739,107.5731165,12z/data=!3m1!4b1!4m5!3m4!1s0x2e68e6398252477f:0x146a1f93d3e815b2!8m2!3d-6.9174639!4d107.6191228?hl=id"><span class="bi bi-geo-alt"></span> Jl. Cijambe Kulon No.77</li>
+                        <li><a href="https://www.google.com/maps/place/Bandung,+Kota+Bandung,+Jawa+Barat/@-6.9032739,107.5731165,12z/data=!3m1!4b1!4m5!3m4!1s0x2e68e6398252477f:0x146a1f93d3e815b2!8m2!3d-6.9174639!4d107.6191228?hl=id"><span class="bi bi-geo-alt"></span> Bandung, Jawa Barat, Indonesia</li>
                         <li><span class="bi bi-phone"></span> (+62) 81528606535</li>
                         <li><span class="bi bi-envelope"></span> dimas.saputro.wisnu@gmail.com</li>
                       </ul>
@@ -677,7 +675,9 @@
       </div>
     </section><!-- End Contact Section -->
 
-  </main><!-- End #main -->
+<div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
+ 
+ </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <footer>
