--- a/index.html
+++ b/index.html
@@ -678,7 +678,7 @@
 <div class="mapouter">
 <div class="gmap_canvas">
 <iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen ></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin= 0 auto;"></iframe>
 </div>
 </div>
 
