--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
             <div class="title-box text-center">
               <h3 class="title-a">
                 Portofolio
-              </h3>
+              </h3>`Z``````
+
               <p class="subtitle-a">
               </p>
               <div class="line-mf"></div>
@@ -675,12 +676,14 @@
       </div>
     </section><!-- End Contact Section -->
 
-<div class="mapouter">
-<div class="gmap_canvas">
-<iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net"></a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen style="margin= 0 auto;"></iframe>
-</div>
-</div>
+	<div class="mapouter">
+                <div class="gmap_canvas">
+                  <iframe style="float:left" width="500" height="315" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  <a href="https://embedgooglemap.net/maps/46"></a><br><style>.mapouter{position:relative;text-align:right;width:500;height:315;}</style><a href="https://www.embedgooglemap.net"></a>
+                  <style>.gmap_canvas {overflow:hidden;background:none!important;width:500;height:315;}</style>
+                  <iframe style="float:right" width="560" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe>
+                </div>
+              </div>
 
  </main><!-- End #main -->
 
