--- a/index.html
+++ b/index.html
@@ -678,10 +678,10 @@
 
 	<div class="mapouter">
                 <div class="gmap_canvas">
-                  <iframe style="float:left" width="560" height="315" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-                  <a href="https://embedgooglemap.net/maps/46"></a><style>.mapouter{position:relative;text-align:right;width:560;height:315;}</style><a href="https://www.embedgooglemap.net"></a>
+                  <iframe width="500" height="315" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  <a href="https://embedgooglemap.net/maps/46"></a><style>.mapouter{position:relative;text-align:right;width:500;height:315;}</style><a href="https://www.embedgooglemap.net"></a>
                   <style>.gmap_canvas {overflow:hidden;background:none!important;width:500;height:315;}</style>
-                  <iframe style="float:right" width="560" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen"></iframe>
+                  <iframe style="float:right" width="500" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
 
