--- a/index.html
+++ b/index.html
@@ -676,15 +676,22 @@
       </div>
     </section><!-- End Contact Section -->
 
-	<div class="mapouter">
+<section class="separator blue">
+      <div class="container">
+        <div class="row">
+            <div class="counter animated" data-animate="fadeInUp" data-delay="0">
+              <div class="mapouter">
                 <div class="gmap_canvas">
-                  <iframe width="500" height="315" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                  <iframe style="float:left" width="500" height="315" id="gmap_canvas" src="https://maps.google.com/maps?q=bandung&amp;t=&amp;z=13&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
                   <a href="https://embedgooglemap.net/maps/46"></a><style>.mapouter{position:relative;text-align:right;width:500;height:315;}</style><a href="https://www.embedgooglemap.net"></a>
                   <style>.gmap_canvas {overflow:hidden;background:none!important;width:500;height:315;}</style>
                   <iframe style="float:right" width="500" height="315" src="https://www.youtube.com/embed/FGD-6Ob_k28" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                 </div>
               </div>
-
+            </div>
+        </div>
+      </div>
+    </section>
  </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
