--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
                       <ul class="list-ico">
                         <li><a href="https://www.google.com/maps/place/Bandung,+Kota+Bandung,+Jawa+Barat/@-6.9032739,107.5731165,12z/data=!3m1!4b1!4m5!3m4!1s0x2e68e6398252477f:0x146a1f93d3e815b2!8m2!3d-6.9174639!4d107.6191228?hl=id"><span class="bi bi-geo-alt"></span> Jl. Cijambe Kulon No.77</li>
                         <li><a href="https://www.google.com/maps/place/Bandung,+Kota+Bandung,+Jawa+Barat/@-6.9032739,107.5731165,12z/data=!3m1!4b1!4m5!3m4!1s0x2e68e6398252477f:0x146a1f93d3e815b2!8m2!3d-6.9174639!4d107.6191228?hl=id"><span class="bi bi-geo-alt"></span> Bandung, Jawa Barat, Indonesia</li>
-                        <li><span class="bi bi-phone"></span> (+62) 81528606535</li>
+                        <li><span class="bi bi-phone"></span> -</li>
                         <li><span class="bi bi-envelope"></span> dimas.saputro.wisnu@gmail.com</li>
                       </ul>
                     </div>
